# ai-datascience-service

./: .gitignore  README.md
.dvc/: config
datasets/credit_score_dataset/: german_credit_risk_v1.0.0_training_23012026.csv.dvc
notebooks-analysis/credit_score_analysis/: credit_score_analysis.ipynb
python-projects/credit-score/: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.client  README.md  dev_requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
python-projects/credit-score/config/logs_configs/: logging_config.py  logging_config.yaml
python-projects/credit-score/config/models-configs/: model_config_000.yaml  model_config_001.yaml  model_config_002.yaml
python-projects/credit-score/examples/client_web/: main.py
python-projects/credit-score/examples/client_web/static/: index.html  script.js  style.css
python-projects/credit-score/inference/: inference.py
python-projects/credit-score/model/: model.py  model_weights_000.pth.dvc  model_weights_001.pth.dvc  model_weights_002.pth.dvc
python-projects/credit-score/processing/: preprocessor.py
python-projects/credit-score/server/: api.py  schemas.py
python-projects/credit-score/training/: training.py
